--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Active Directory Authentication Library (ADAL) for Backbone",
   "main": "./lib/backbone.adal.js",
   "scripts": {
+    "start": "grunt",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,6 +30,11 @@
     "jquery": "^3.2.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0"
+    "babel-cli": "^6.26.0",
+    "grunt": "^1.0.1",
+    "grunt-available-tasks": "^0.6.0",
+    "grunt-cli": "^1.2.0",
+    "load-grunt-tasks": "^3.2.0",
+    "grunt-release": "^0.14.0"
   }
 }
